--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Anish</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8f1bd384ff.js" crossorigin="anonymous"></script>
 </head>
