--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <a href="https://www.instagram.com/mr.anishbhagat/"> <i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/anishkumarr/"> <i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/MyCV.pdf.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images/MyCV.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
@@ -238,7 +238,7 @@
                     setTimeout(function () {
                         msg.innerHTML = ""
 
-                    }, 5000)
+                    }, 2000)
                     form.reset()
                 })
 
