--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
-                    <p> gdgfdgfufufugfufgugufgu </p>
+                    <p> Soon </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
-                    <p> gdgfdgfufufugfufgugufgu </p>
+                    <p> Soon </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-uncharted"></i>
                     <h2>Software Devloper</h2>
-                    <p> gdgfdgfufufugfufgugufgu </p>
+                    <p> Soon </p>
                     <a href="#">Learn more</a>
                 </div>
             </div>
