--- a/index.html
+++ b/index.html
@@ -123,27 +123,26 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png">
+                    <img src="images/fusion-verse3.png">
                     <div class="layer">
-                        <h3>Food Website</h3>
-                        <p>Performed an analysis on data and security of website.</p>
+                        <h3>Fusion Verse </h3>
+                        <p>AI-based Software by integrating 5 different AI tools..</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png">
+                    <img src="images/ieatfreash2.png">
                     <div class="layer">
-                        <h3>Chat Bot</h3>
-                        <p>Linked it with FaceBook.</p>
+                        <h3>I eat freash</h3>
+                        <p> Website for restaurant table booking.</p>
                         <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-3.png">
                     <div class="layer">
-                        <h3>Phishing URL Detection Software</h3>
-                        <p>A Project that helps to distinguish Malicious URLs and helps Users to
-                            not fall in the traps of hackers and prevent Data theft. </p>
+                        <h3>Covid-19 Analysis</h3>
+                        <p>Intrective Dash Board to provide COVID-19 in India analysis. </p>
                         <a href="https://github.com/anish1802/Identification-of-phishing-website"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
